--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coke-builder",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React app build tool",
   "main": "src/index.js",
   "author": "jiuhu.zh@gmail.com",
@@ -13,8 +13,12 @@
     "node": ">=6.x",
     "npm": ">=3.x"
   },
+  "scripts": {
+    "demo": "node ./demo/index.js"
+  },
   "dependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
@@ -23,6 +27,7 @@
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
     "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
     "happypack": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.4",
@@ -37,7 +42,8 @@
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "webpackbar": "^3.1.3"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
